--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,13 @@
     <![endif]-->
   </head>
   <body>
-    <!--<header class="navbar navbar-fixed-top navbar-inverse">
+
+    <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
           <%= link_to "sample app", '#', id: "logo" %>
           <nav>
-            <ul class="nav pull-right">
+            <ul class="nav navbar-nav pull-right">
               <li><%= link_to "Home",    '#' %></li>
               <li><%= link_to "Help",    '#' %></li>
               <li><%= link_to "Sign in", '#' %></li>
@@ -24,7 +25,7 @@
           </nav>
         </div>
       </div>
-    </header>-->
+    </header>
     <div class="container">
       <%= yield %>
     </div>
